--- a/documentation/formula/kalman-filter-model-mecanum.tex
+++ b/documentation/formula/kalman-filter-model-mecanum.tex
@@ -28,8 +28,8 @@ This document defines the formulas required for a Kalman filter that is used to 
 
 \subsection{Yaw}
 \begin{align}
-  \phi_{z_t} &= \phi_{z_{t-1}} + \phi_{z_{t-1}}\frac{d}{dt} dt \\
-  \phi_{z_t}\frac{d}{dt} &= \phi_{z_{t-1}}\frac{d}{dt}
+  \phi_{z_t} &= \phi_{z_{t-1}} + \frac{d}{dt}\phi_{z_{t-1}} dt \\
+  \frac{d}{dt}\phi_{z_t} &= \frac{d}{dt}\phi_{z_{t-1}}
 \end{align}
 
 \subsection{Position}
@@ -55,10 +55,9 @@ This document defines the formulas required for a Kalman filter that is used to 
   a_{x_t} \\
   a_{y_t} \\
   \phi_t \\
-  \phi\frac{d}{dt}
+  \frac{d}{dt}\phi
  \end{matrix}\right)
- = \textbf{F} = 
- \left(\begin{matrix}dt^{2} \left(0.5 a_{x_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)} - 0.5 a_{y_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)}\right) + dt \left(v_{x_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)} - v_{y_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)}\right) + p_{x (t-1)}\\dt^{2} \left(0.5 a_{x_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)} + 0.5 a_{y_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)}\right) + dt \left(v_{x_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)} + v_{y_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)}\right) + p_{y (t-1)}\\a_{x_{t-1}} dt + v_{x_{t-1}}\\a_{y_{t-1}} dt + v_{y_{t-1}}\\a_{x_{t-1}}\\a_{y_{t-1}}\\\phi_{z_{t-1}} + \phi_{z_{t-1}}\frac{d}{dt} dt\\\phi_{z_{t-1}}\frac{d}{dt}\end{matrix}\right) \\
+ = \left(\begin{matrix}dt^{2} \left(0.5 a_{x_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)} - 0.5 a_{y_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)}\right) + dt \left(v_{x_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)} - v_{y_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)}\right) + p_{x (t-1)}\\dt^{2} \left(0.5 a_{x_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)} + 0.5 a_{y_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)}\right) + dt \left(v_{x_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)} + v_{y_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)}\right) + p_{y (t-1)}\\a_{x_{t-1}} dt + v_{x_{t-1}}\\a_{y_{t-1}} dt + v_{y_{t-1}}\\a_{x_{t-1}}\\a_{y_{t-1}}\\\phi_{z_{t-1}} + \frac{d}{dt}\phi_{z_{t-1}} dt\\\frac{d}{dt}\phi_{z_{t-1}}\end{matrix}\right) \\
   \textbf{J}_t &= 
   \textbf{F}\left(\begin{matrix}
     \frac{\partial}{\partial p_x} & \frac{\partial}{\partial p_y} & \frac{\partial}{\partial v_x} & \frac{\partial}{\partial v_y} & \frac{\partial}{\partial a_x} & \frac{\partial}{\partial a_y} & \frac{\partial}{\partial \phi}\frac{\partial^2}{\partial^2 \phi}
@@ -66,4 +65,54 @@ This document defines the formulas required for a Kalman filter that is used to 
   &= \left(\begin{matrix}1 & 0 & dt \cos{\left(\phi_{z_{t-1}} \right)} & - dt \sin{\left(\phi_{z_{t-1}} \right)} & 0.5 dt^{2} \cos{\left(\phi_{z_{t-1}} \right)} & - 0.5 dt^{2} \sin{\left(\phi_{z_{t-1}} \right)} & dt^{2} \left(- 0.5 a_{x_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)} - 0.5 a_{y_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)}\right) + dt \left(- v_{x_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)} - v_{y_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)}\right) & 0\\0 & 1 & dt \sin{\left(\phi_{z_{t-1}} \right)} & dt \cos{\left(\phi_{z_{t-1}} \right)} & 0.5 dt^{2} \sin{\left(\phi_{z_{t-1}} \right)} & 0.5 dt^{2} \cos{\left(\phi_{z_{t-1}} \right)} & dt^{2} \left(0.5 a_{x_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)} - 0.5 a_{y_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)}\right) + dt \left(v_{x_{t-1}} \cos{\left(\phi_{z_{t-1}} \right)} - v_{y_{t-1}} \sin{\left(\phi_{z_{t-1}} \right)}\right) & 0\\0 & 0 & 1 & 0 & dt & 0 & 0 & 0\\0 & 0 & 0 & 1 & 0 & dt & 0 & 0\\0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 1 & dt\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\end{matrix}\right)
 \end{align}
 \end{landscape}
+
+\newpage
+\section{System Noise Model}
+\subsection{Via Jerk}
+
+The system noise is partly determined by the jerk that the robot can experience. The jerk is not directly observed and is well suited for describing the disturbance.
+
+\begin{align}
+  \textbf{j} &= \left(\begin{matrix}j_{x}\\j_{y}\end{matrix}\right) \\
+  \textbf{a} &= \left(\begin{matrix}dt j_{x}\\dt j_{y}\end{matrix}\right) \\
+  \textbf{v} &= \left(\begin{matrix}dt^{2} j_{x}\\dt^{2} j_{y}\end{matrix}\right) \\
+  \textbf{p} &= \left(\begin{matrix}dt^{3} j_{x}\\dt^{3} j_{y}\end{matrix}\right) \\
+  \textbf{j}_{\textrm{noise}} &= \left(\begin{matrix}dt^{3} j_{x}\\dt^{3} j_{y}\\dt^{2} j_{x}\\dt^{2} j_{y}\\dt j_{x}\\dt j_{y}\\0\\0\end{matrix}\right)
+  = \left(\begin{matrix}
+    \textbf{p} \\
+    \textbf{v} \\
+    \textbf{a} \\
+    0 \\
+    0
+  \end{matrix}\right)
+\end{align}
+
+\begin{align}
+  \textbf{Q}_{\textbf{j}} &= \sigma^2_{\textbf{j}} \cdot \textbf{j}_{\textrm{noise}} \cdot \textbf{j}_{\textrm{noise}}^T =
+  \left(\begin{matrix}dt^{6} j_{x}^{2} & dt^{6} j_{x} j_{y} & dt^{5} j_{x}^{2} & dt^{5} j_{x} j_{y} & dt^{4} j_{x}^{2} & dt^{4} j_{x} j_{y} & 0 & 0\\dt^{6} j_{x} j_{y} & dt^{6} j_{y}^{2} & dt^{5} j_{x} j_{y} & dt^{5} j_{y}^{2} & dt^{4} j_{x} j_{y} & dt^{4} j_{y}^{2} & 0 & 0\\dt^{5} j_{x}^{2} & dt^{5} j_{x} j_{y} & dt^{4} j_{x}^{2} & dt^{4} j_{x} j_{y} & dt^{3} j_{x}^{2} & dt^{3} j_{x} j_{y} & 0 & 0\\dt^{5} j_{x} j_{y} & dt^{5} j_{y}^{2} & dt^{4} j_{x} j_{y} & dt^{4} j_{y}^{2} & dt^{3} j_{x} j_{y} & dt^{3} j_{y}^{2} & 0 & 0\\dt^{4} j_{x}^{2} & dt^{4} j_{x} j_{y} & dt^{3} j_{x}^{2} & dt^{3} j_{x} j_{y} & dt^{2} j_{x}^{2} & dt^{2} j_{x} j_{y} & 0 & 0\\dt^{4} j_{x} j_{y} & dt^{4} j_{y}^{2} & dt^{3} j_{x} j_{y} & dt^{3} j_{y}^{2} & dt^{2} j_{x} j_{y} & dt^{2} j_{y}^{2} & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\end{matrix}\right)
+\end{align}
+
+
+\subsection{Via Yaw Acceleration}
+
+The system noise is partly determined by the yaw acceleration that the robot can experience. The yaw acceleration is not directly observed and is well suited for describing the disturbance.
+
+\begin{align}
+  \frac{d}{dt}\phi_z &= \frac{d^2}{dt^2}\phi_z dt \\
+  \phi_z &= \frac{d^2}{dt^2}\phi_z dt^{2} \\
+  \frac{d^2}{dt^2}\phi_{z_\textrm{noise}} &= \left(\begin{matrix}0\\0\\0\\0\\0\\0\\\frac{d^2}{dt^2}\phi_z dt^{2}\\\frac{d^2}{dt^2}\phi_z dt\end{matrix}\right) \\
+\end{align}
+
+\begin{align}
+  \textbf{Q}_{\textrm{yaw}} &= \sigma^2_{\textrm{yaw}} \cdot \frac{d^2}{dt^2}\phi_{z_\textrm{noise}} \cdot \frac{d^2}{dt^2}\phi_{z_\textrm{noise}}^T =
+\left(\begin{matrix}0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{4} & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{3}\\0 & 0 & 0 & 0 & 0 & 0 & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{3} & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{2}\end{matrix}\right)
+\end{align}
+
+\subsection{Final System Noise Matrix}
+
+\begin{align}
+  \textbf{Q} &= \textbf{Q}_{\textbf{j}} + \textbf{Q}_{\textrm{yaw}} \\
+&= \left(\begin{matrix}\sigma^2_\textbf{j} dt^{6} j_{x}^{2} & \sigma^2_\textbf{j} dt^{6} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{5} j_{x}^{2} & \sigma^2_\textbf{j} dt^{5} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{4} j_{x}^{2} & \sigma^2_\textbf{j} dt^{4} j_{x} j_{y} & 0 & 0\\\sigma^2_\textbf{j} dt^{6} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{6} j_{y}^{2} & \sigma^2_\textbf{j} dt^{5} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{5} j_{y}^{2} & \sigma^2_\textbf{j} dt^{4} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{4} j_{y}^{2} & 0 & 0\\\sigma^2_\textbf{j} dt^{5} j_{x}^{2} & \sigma^2_\textbf{j} dt^{5} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{4} j_{x}^{2} & \sigma^2_\textbf{j} dt^{4} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{3} j_{x}^{2} & \sigma^2_\textbf{j} dt^{3} j_{x} j_{y} & 0 & 0\\\sigma^2_\textbf{j} dt^{5} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{5} j_{y}^{2} & \sigma^2_\textbf{j} dt^{4} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{4} j_{y}^{2} & \sigma^2_\textbf{j} dt^{3} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{3} j_{y}^{2} & 0 & 0\\\sigma^2_\textbf{j} dt^{4} j_{x}^{2} & \sigma^2_\textbf{j} dt^{4} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{3} j_{x}^{2} & \sigma^2_\textbf{j} dt^{3} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{2} j_{x}^{2} & \sigma^2_\textbf{j} dt^{2} j_{x} j_{y} & 0 & 0\\\sigma^2_\textbf{j} dt^{4} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{4} j_{y}^{2} & \sigma^2_\textbf{j} dt^{3} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{3} j_{y}^{2} & \sigma^2_\textbf{j} dt^{2} j_{x} j_{y} & \sigma^2_\textbf{j} dt^{2} j_{y}^{2} & 0 & 0\\0 & 0 & 0 & 0 & 0 & 0 & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{4} & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{3}\\0 & 0 & 0 & 0 & 0 & 0 & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{3} & \left(\frac{d^2}{dt^2}\phi_z\right)^{2} \sigma^2_{\textrm{yaw}} dt^{2}\end{matrix}\right)
+\end{align}
+
 \end{document}
